fixed the more layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -461,15 +461,15 @@ h1.box-2-item {
 .box4 {
   /* grid-column: 3/3;
   grid-row: 1/3; */
-  margin-top: 120px;
+  /* margin-top: 120px; */
   /* grid-row-end: 3;   */
-  height: auto;
+  /* height: auto; */
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 70%;
+  height: 25vh;
 }
 
 
